@@ -76,7 +76,18 @@ public class TaskService extends Service implements ScheduledExecutorService {
      * @author Tim Peierls
      */
     private static class RestletThreadFactory implements ThreadFactory {
+
+        /**
+         * Indicates whether or not the thread is a daemon thread. True by
+         * default.
+         */
+        private boolean daemon;
+
         final ThreadFactory factory = Executors.defaultThreadFactory();
+
+        public RestletThreadFactory(boolean daemon) {
+            this.daemon = daemon;
+        }
 
         public Thread newThread(Runnable runnable) {
             Thread t = factory.newThread(runnable);
@@ -84,6 +95,7 @@ public class TaskService extends Service implements ScheduledExecutorService {
             // Default factory is documented as producing names of the
             // form "pool-N-thread-M".
             t.setName(t.getName().replaceFirst("pool", "restlet"));
+            t.setDaemon(daemon);
             return t;
         }
     }
@@ -224,6 +236,14 @@ public class TaskService extends Service implements ScheduledExecutorService {
         };
     }
 
+    /** The core pool size defining the maximum number of threads. */
+    private volatile int corePoolSize;
+
+    /**
+     * Indicates whether or not the threads are daemon threads. True by default.
+     */
+    private volatile boolean daemon;
+
     /**
      * Allow {@link #shutdown()} and {@link #shutdownNow()} methods to
      * effectively shutdown the wrapped executor service.
@@ -232,9 +252,6 @@ public class TaskService extends Service implements ScheduledExecutorService {
 
     /** The wrapped JDK executor service. */
     private volatile ScheduledExecutorService wrapped;
-
-    /** The core pool size defining the maximum number of threads. */
-    private volatile int corePoolSize;
 
     /**
      * Constructor. Enables the service and set the core pool size to 4 by
@@ -251,7 +268,20 @@ public class TaskService extends Service implements ScheduledExecutorService {
      *            True if the service has been enabled.
      */
     public TaskService(boolean enabled) {
+        this(enabled, true);
+    }
+
+    /**
+     * Constructor. Set the core pool size to 4 by default.
+     * 
+     * @param enabled
+     *            True if the service has been enabled.
+     * @param daemon
+     *            True if the threads are created as daemon threads.
+     */
+    public TaskService(boolean enabled, boolean daemon) {
         this(enabled, 4);
+        this.daemon = daemon;
     }
 
     /**
@@ -317,7 +347,7 @@ public class TaskService extends Service implements ScheduledExecutorService {
      * @return A new thread factory.
      */
     protected ThreadFactory createThreadFactory() {
-        return new RestletThreadFactory();
+        return new RestletThreadFactory(daemon);
     }
 
     /**
@@ -445,6 +475,15 @@ public class TaskService extends Service implements ScheduledExecutorService {
             throws InterruptedException, ExecutionException, TimeoutException {
         startIfNeeded();
         return getWrapped().invokeAny(tasks, timeout, unit);
+    }
+
+    /**
+     * Indicates whether the threads are created as daemon threads.
+     * 
+     * @return True if the threads are created as daemon threads.
+     */
+    public boolean isDaemon() {
+        return daemon;
     }
 
     /**
@@ -597,6 +636,16 @@ public class TaskService extends Service implements ScheduledExecutorService {
      */
     public void setCorePoolSize(int corePoolSize) {
         this.corePoolSize = corePoolSize;
+    }
+
+    /**
+     * Indicates whether or not the threads are daemon threads. True by default.
+     * 
+     * @param daemon
+     *            True if the threads are daemon threads.
+     */
+    public void setDaemon(boolean daemon) {
+        this.daemon = daemon;
     }
 
     /**
